data/derived/comb/progs/unify/prog6453.ml.out
Characters 97-110:
  | h::t -> if List.mem(h,t) then helper(seen',t)
               ^^^^^^^^^^^^^
Error: This expression has type ('a * 'a list) list -> bool
       but an expression was expected of type bool
